--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
         <div class="img"></div>
         <div class="desc"></div>
     </div>
-    <sc*ipt src="./index.js"></script>
-</body>*
-</html>**/
+    <script src="./index.js"></script>
+</body>
+</html>
